--- a/spring-batch-docs/src/main/asciidoc/index.adoc
+++ b/spring-batch-docs/src/main/asciidoc/index.adoc
@@ -1,3 +1,5 @@
+include::attributes.adoc[]
+
 include::header/index-header.adoc[]
 
 // ======================================================================================
